tests/dev_server/errors/js_import_throw/main.js
import "./file.js"

// if (import.meta.hot) {
//   import.meta.hot.accept()
// }

throw new Error("here")
